main.css
/* ... */
/* Clearing
–––––––––––––––––––––––––––––––––––––––––––––––––– */

/* Self Clearing Goodness */
.container:after,
.row:after,
.u-cf {
  content: "";
  display: table;
  clear: both; }


/* Media Queries
–––––––––––––––––––––––––––––––––––––––––––––––––– */
/*
Note: The best way to structure the use of media queries is to create the queries
near the relevant code. For example, if you wanted to change the styles for buttons
on small devices, paste the mobile query code up in the buttons section and style it
there.
*/


/* Larger than mobile */
@media (min-width: 400px) {}

/* Larger than phablet (also point when grid becomes active) */
@media (min-width: 550px) {}

/* Larger than tablet */
@media (min-width: 750px) {}

/* Larger than desktop */
@media (min-width: 1000px) {}

/* Larger than Desktop HD */
@media (min-width: 1200px) {}


/* Navigation
–––––––––––––––––––––––––––––––––––––––––––––––––– */

nav {
  height: 40px;
  width: 100%;
  max-width: 960px;
  background-color: #888a85;
  position: relative; }

nav ul {
  padding: 0;
  margin: 0 auto;
  width: 550px;
  height: 40px; }

nav li {
  display: inline;
  float: left;
  font-family: "Cantarell", arial, sans-serif;
  font-size: 1.5rem; }

.clearfix:before,
.clearfix:after {
  content: " ";
  display: table; }
.clearfix:after {
  clear: both; }
.clearfix {
  *zoom: 1; }

nav a {
  color: #FFFFFF;
  display: inline-block;
  width: 110px;
  text-align: center;
  text-decoration: none;
  line-height: 40px; }

nav li a {
  border-right: 1px solid #CCCCCC;
  box-sizing:border-box;
  -moz-box-sizing:border-box;
  -webkit-box-sizing:border-box; }

nav li:first-child a {
  border-left: 1px solid #CCCCCC; }

nav a:hover,
nav a:active,
.nav-current {
  background-color: #a0a19d;
  color: #000000;
  text-decoration: none; }

nav a#name, nav a#pull {
  display: none; }

nav a#name:hover, nav a#name:active, nav a#pull:hover, nav a#pull:active {
  background-color: transparent;
  color: #FFFFFF; }

@media screen and (max-width: 700px) {
  nav {
    height: 40px; }
  nav ul {
    width: 100%;
    display: block;
    height: auto;
    margin: 0; }
  nav li {
    width: 20%;
    float: left;
    position: relative; }
  nav li:first-child a {
    border-left: 0; }
  nav li:last-child a {
    border-right: 0; }
  nav a {
    text-align: center;
    width: 100%; }
}

@media only screen and (max-width: 400px) {
  h1.name {
    display: none; }
  nav {
    height: auto;
    border-bottom: 1px solid #CCCCCC;
    background-color: #000000; }
  nav ul {
    display: none;
    height: auto;
    margin: 0; }
  nav li {
    height: auto;
    border-bottom: 1px solid #CCCCCC;
    margin: 0;
    background-color: #888a85; }
  nav a:hover,
  nav a:active,
  .nav-current {
    background-color: #a0a19d; }
  nav a#name {
    display: block;
    height: auto;
    width: 80%;
    position: relative;
    font-family: "Crimson Text", times, serif;
    font-size: 2rem;
    text-indent: 5.5rem; }
  nav a#pull {
    display: block;
    height: auto;
    width: 100%;
    position: relative;
    cursor: pointer; }
  nav a#pull:after {
    font-family: fa;
    font-size: 20px;
    content:"\e810";
    display: inline-block;
    position: absolute;
    right: 10px;
    top: -40px; }
}

@media only screen and (max-width: 350px) {
  nav ul {
    margin: 0; }
  nav li {
    display: block;
    float: none;
    width: 100%; }
  nav li a {
    border-right: 0; }
}

@media only screen and (max-width: 250px) {
  nav a#name {
    font-size: 1.8rem;
    text-align: left;
    text-indent: 10px; }
}

